Стажер 4.3.1. Collection API Улучшения