@@ -1,8 +1,6 @@
 package ru.job4j.list;
 
 import org.junit.Test;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -11,7 +9,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -22,7 +20,7 @@ public class ConvertList2ArrayTest {
     @Test
     public void when12ElementsThen15() {
         ConvertList2Array list = new ConvertList2Array();
-        int[][] result = list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12), 5);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12), 5);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -35,11 +33,9 @@ public class ConvertList2ArrayTest {
     @Test
     public void when3Arrays() {
         ConvertList2Array list = new ConvertList2Array();
-        List<int[]> arraylist = new ArrayList<>();
-        arraylist.add(new int[] {1, 2, 3, 4, 5});
-        arraylist.add(new int[] {6, 7, 8});
+        List<int[]> arraylist = List.of(new int[] {1, 2, 3, 4, 5}, new int[] {6, 7, 8});
         List<Integer> result = list.convert(arraylist);
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8);
         assertThat(result, is(expect));
     }
 }
