@@ -14,7 +14,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4);
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
@@ -26,7 +26,7 @@ public class ConvertMatrix2ListTest {
                 {4, 5, 6},
                 {7, 8, 9}
         };
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         List<Integer> result = list.toList(input);
         assertThat(result, is(expect));
     }
