@@ -9,7 +9,7 @@ import static org.hamcrest.core.Is.is;
 
 public class SortUserTest {
     SortUser sorted = new SortUser();
-    List<User> list = new ArrayList<>();
+    List<User> list;
     User user1 = new User("Anton", 30);
     User user2 = new User("Boris", 20);
     User user3 = new User("Dmitrii", 40);
@@ -19,40 +19,44 @@ public class SortUserTest {
 
     @Test
     public void threeNameList() {
-        list.add(user1);
-        list.add(user2);
-        list.add(user3);
+        list = List.of(
+        user1,
+        user2,
+        user3);
         Set<User> result = sorted.sort(list);
-        Assert.assertThat(result, is(new TreeSet(Arrays.asList(user2, user1, user3))));
+        Assert.assertThat(result, is(Set.of(user2, user1, user3)));
     }
     @Test
     public void fiveNameList() {
-        list.add(user1);
-        list.add(user2);
-        list.add(user3);
-        list.add(user4);
-        list.add(user5);
+        list = List.of(
+        user1,
+        user2,
+        user3,
+        user4,
+        user5);
         Set<User> result = sorted.sort(list);
-        Assert.assertThat(result, is(new TreeSet(Arrays.asList(user2, user1, user3, user4, user5))));
+        Assert.assertThat(result, is(Set.of(user2, user1, user3, user4, user5)));
     }
     @Test
     public void nameLengthTest() {
-        list.add(user3);
-        list.add(user2);
-        list.add(user6);
-        list.add(user1);
+        list = new ArrayList<>(List.of(
+        user3,
+        user2,
+        user6,
+        user1));
         List<User> result = sorted.sortNameLength(list);
-        Assert.assertThat(result, is(new ArrayList(Arrays.asList(user2, user1, user3, user6))));
+        Assert.assertThat(result, is(List.of(user2, user1, user3, user6)));
     }
     @Test
     public void allFieldsTest() {
-        list.add(user3);
-        list.add(user2);
-        list.add(user6);
-        list.add(user5);
-        list.add(user4);
-        list.add(user1);
+        list = new ArrayList<>(List.of(
+        user3,
+        user2,
+        user6,
+        user5,
+        user4,
+        user1));
         List<User> result = sorted.sortByAllFields(list);
-        Assert.assertThat(result, is(new ArrayList(Arrays.asList(user1, user2, user3, user5, user4, user6))));
+        Assert.assertThat(result, is(List.of(user1, user2, user3, user5, user4, user6)));
     }
 }
